Header- fix issues on mobile

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,5 @@
+@import "../../breakpoints.scss";
+
 header {
   position: fixed;
   z-index: 100;
@@ -13,6 +15,10 @@ header {
   font-weight: bold;
   background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 70%, rgba(0,0,0,0) 100%);
 
+  @include for-phone-only {
+     padding-bottom: 35px;
+  }
+
   a.logo{
     position: relative;
     top: 8px;
@@ -25,6 +31,10 @@ header {
     span {
       padding-left: 5px;
       font-size: 16px;
+    }
+
+    @include for-phone-only {
+      top: 6px;
     }
   }
 
